RestService api call Error fix